--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -17,6 +17,6 @@
         </tr>
     </table>
  
-    <a href=”/admin/products/write” class=”btn btn-default”>작성하기</a>
+    <a href="/admin/products/write" class="btn btn-default">작성하기</a>
  
 <% include ../include/footer.ejs %>
